added angular material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
-
-<h1>some header just for visualization</h1>
+<mat-toolbar color="primary">
+  <span style="cursor: pointer">BSeR</span>
+  <span style="margin-left: 1em">
+    <button mat-flat-button color="primary">View Referrals</button>
+    <button mat-flat-button color="primary">Refer Patient</button>
+  </span>
+</mat-toolbar>
+<app-main></app-main>
 
 <router-outlet></router-outlet>
