created a folder for components and added landing page and patient demographics components.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,6 @@
     <button mat-flat-button color="primary">Refer Patient</button>
   </span>
 </mat-toolbar>
-<app-main></app-main>
+<app-patient-demographics></app-patient-demographics>
 
 <router-outlet></router-outlet>
