--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,1 +1,31 @@
-<p>landing works!</p>
+<mat-sidenav-container [autosize]="false">
+
+  <mat-sidenav mode="side" opened>
+
+    <mat-nav-list>
+
+      <mat-list-item>
+        <mat-icon>
+          person
+        </mat-icon>
+        <span>&nbsp;Action 1</span>
+      </mat-list-item>
+
+      <mat-list-item>
+        <mat-icon>
+          question_mark
+        </mat-icon>
+        <span>&nbsp;Action 2</span>
+      </mat-list-item>
+
+    </mat-nav-list>
+
+  </mat-sidenav>
+
+  <mat-sidenav-content>
+
+    <app-active-refferals></app-active-refferals>
+
+  </mat-sidenav-content>
+
+</mat-sidenav-container>
