Added icons to the sidenav.

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -6,16 +6,23 @@
 
       <mat-list-item>
         <mat-icon>
-          person
+          visibility
         </mat-icon>
-        <span>&nbsp;Action 1</span>
+        <span>&nbsp;View Active Referrals </span>
       </mat-list-item>
 
       <mat-list-item>
         <mat-icon>
-          question_mark
+          add
         </mat-icon>
-        <span>&nbsp;Action 2</span>
+        <span>&nbsp;Create Referral </span>
+      </mat-list-item>
+
+      <mat-list-item>
+        <mat-icon>
+          edit
+        </mat-icon>
+        <span>&nbsp;Resume </span>
       </mat-list-item>
 
     </mat-nav-list>
