--- a/src/app/components/patient-demographics/patient-demographics.component.html
+++ b/src/app/components/patient-demographics/patient-demographics.component.html
@@ -1,1 +1,30 @@
-<p>Patient Demographics Data Here.</p>
+<!--
+TODO:
+1. Extract all the style tags into css when we know more about the content
+2. Load Content dynamically from the api
+-->
+
+<div style="background-color: #0d47a1; color: white;">
+  <div class="row container" style="font-size: large; padding-top: 1em;">
+      <div class="col">Burdell, George</div>
+      <div class="col">Gender: Male</div>
+      <div class="col">Date of Birth: 9 July, 2023</div>
+  </div>
+    <div class="row container" style="padding-top: 2em; padding-bottom: 1em">
+      <div class="col">
+        Address:<br/>
+        123 Peachtree St NE <br/> Atlanta GA, 30333
+      </div>
+      <div class="col">
+        Phone Number: 404-333-7878 <br/>
+        Phone Number 2: (0359) 44-333-7878 <br/>
+        email: george.burdell@gatech.edu <br/>
+      </div>
+      <div class="col">Preferred Language(s): English</div>
+      <div class="col">Insurance Coverage: <br/>
+        Aetna<br/>
+        Group: ABCD<br>
+        Policy #: 12345-987-456
+      </div>
+    </div>
+</div>
