Added a basic stepper

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <div class="header">
 
     <mat-toolbar style="background-color: #002171; color: white">
-      <span style="cursor: pointer">BSeR Referral Manager</span>
+      <span style="cursor: pointer"  [routerLink]="'/'">BSeR Referral Manager</span>
     </mat-toolbar>
 
     <app-patient-demographics></app-patient-demographics>
