Added Patient General Information component.

--- a/src/app/components/create-referral/create-referral.component.html
+++ b/src/app/components/create-referral/create-referral.component.html
@@ -13,8 +13,11 @@
         </mat-step>
 
         <mat-step label="General Information and Service Type">
-          General Information and Service Type Content
+          <div class="scrollable-container">
+            <app-patient-general-information></app-patient-general-information>
+          </div>
         </mat-step>
+
         <mat-step label="Supporting Information">
           Supporting Information Content
           <p>You are now done.</p>
