--- a/src/app/components/create-referral/create-referral.component.html
+++ b/src/app/components/create-referral/create-referral.component.html
@@ -12,15 +12,17 @@
           </div>
         </mat-step>
 
+        <!-- Select supporting information -->
+        <mat-step label="Supporting Information">
+          <app-request-supporting-information></app-request-supporting-information>
+          <p>You are now done.</p>
+        </mat-step>
+
+        <!-- Add Patient general information -->
         <mat-step label="General Information and Service Type">
           <div class="scrollable-container">
             <app-patient-general-information></app-patient-general-information>
           </div>
-        </mat-step>
-
-        <mat-step label="Supporting Information">
-          Supporting Information Content
-          <p>You are now done.</p>
           <div>
             <button mat-button matStepperPrevious>Back</button>
             <button mat-button (click)="stepper.reset()">Reset</button>
