--- a/src/app/components/patient-general-information/patient-general-information.component.html
+++ b/src/app/components/patient-general-information/patient-general-information.component.html
@@ -3,35 +3,65 @@
 <form [formGroup]="patientGeneralInformationForm" (ngSubmit)="onSubmit()">
 
   <div class="row">
-    <mat-form-field class="col" appearance="outline" class="col" style="margin-right: 1em">
-      <mat-label>Height</mat-label>
-      <input matInput type='text' formControlName="height">
-      <mat-hint>I think we need to have the units we want here (metric or standard)</mat-hint>
+
+      <mat-form-field appearance="outline" class="col" style="margin-right: 1em">
+        <mat-label>Height</mat-label>
+        <input matInput type='text' formControlName="height">
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" style="width: 7%; margin-right: 2em">
+        <mat-label>Unit</mat-label>
+        <mat-select>
+          <mat-option *ngFor="let unit of appConstants.HEIGHT_UNITS" [value]="unit">
+            {{unit}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" class="col" style="margin-left: 2em; margin-right: 1em;">
+        <mat-label>Weight</mat-label>
+        <input matInput type='text' formControlName="weight">
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" style="width: 7%; margin-right: 2em;">
+        <mat-label>Unit</mat-label>
+        <mat-select>
+          <mat-option *ngFor="let unit of appConstants.WEIGHT_UNITS" [value]="unit">
+            {{unit}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+    <mat-form-field appearance="outline" style="margin-left: 2em;">
+      <mat-label>BMI</mat-label>
+      <span matSuffix>kg/m²</span>
+      <input matInput type='text' formControlName="bmi">
     </mat-form-field>
-    <mat-form-field appearance="outline" class="col" style="margin-left: 1em; margin-right: 1em">
-      <mat-label>Weight</mat-label>
-      <input matInput type='text' formControlName="weight">
-      <mat-hint>I think we need to have the units we want here (metric or standard)</mat-hint>
-    </mat-form-field>
+
   </div>
 
   <div class="row">
-    <mat-form-field appearance="outline" class="col"  style="margin-right: 1em">
-      <mat-label>BMI</mat-label>
-      <input matInput type='text' formControlName="bmi">
-      <mat-hint>I think we need to have the units we want here (metric or standard)</mat-hint>
-    </mat-form-field>
-    <mat-form-field appearance="outline" class="col" style="margin-left: 1em; margin-right: 1em">
-      <mat-label>BP</mat-label>
+   <div class="col">
+    <mat-form-field appearance="outline" style="width: 14%">
+      <mat-label>BP (SYS)</mat-label>
+      <span matSuffix>mmHg</span>
       <input matInput type='text' formControlName="bp">
-      <mat-hint>I think we need to have the units we want here.</mat-hint>
     </mat-form-field>
+
+     <span style="margin-right: 1em; margin-left: 1em; font-weight: bold; font-size: x-large">/</span>
+
+    <mat-form-field appearance="outline" style="margin-right: 1em; width: 14%">
+      <mat-label>BP (DIA)</mat-label>
+      <span matSuffix>mmHg</span>
+      <input matInput type='text' formControlName="bp">
+    </mat-form-field>
+  </div>
   </div>
 
   <div class="row" style="margin-top: 1em">
     <mat-form-field appearance="outline" class="col">
       <mat-label>Allergies/Intolerances</mat-label>
-      <textarea matInput type='text' formControlName="allergies" rows="10"></textarea>
+      <textarea matInput type='text' formControlName="allergies" rows="6"></textarea>
     </mat-form-field>
   </div>
 
