Implemented selecting service provider.

--- a/src/app/components/active-referrals/active-referrals.component.html
+++ b/src/app/components/active-referrals/active-referrals.component.html
@@ -1,7 +1,7 @@
 <div class="container top-spacer">
 
   <div class="controls">
-    <div style="font-size: large">Referrals</div>
+    <div style="font-size: large">Active Referrals and Drafts</div>
     <div class="spacer"></div>
     <button mat-raised-button color="primary" [routerLink]="'/create-referral'">Create Referral</button>
   </div>
