--- a/src/app/components/service-provider-list/service-provider-list.component.html
+++ b/src/app/components/service-provider-list/service-provider-list.component.html
@@ -1,5 +1,9 @@
-<div *ngFor="let number of [1, 2, 3, 4, 5, 6, 7]">
+<div *ngFor="let serviceProvider of serviceProviders">
   <div style="margin-bottom: 1em">
-    <app-service-provider></app-service-provider>
+    <app-service-provider
+      [serviceProvider]=serviceProvider
+      (updateSelectedValueEvent)="updateProviderSelectedValue($event)"
+    >
+    </app-service-provider>
   </div>
 </div>
