--- a/src/app/components/active-referrals/active-referrals.component.html
+++ b/src/app/components/active-referrals/active-referrals.component.html
@@ -3,7 +3,9 @@
   <div class="controls">
     <div style="font-size: large">Active Referrals and Drafts</div>
     <div class="spacer"></div>
-    <button mat-raised-button color="primary" [routerLink]="'/create-referral'">Create Referral</button>
+    <button mat-raised-button color="primary" [routerLink]="'/create-referral'">
+      <mat-icon>add</mat-icon>Create Referral
+    </button>
   </div>
 
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
