Minor code cleanup.

--- a/src/app/components/active-referrals/active-referrals.component.html
+++ b/src/app/components/active-referrals/active-referrals.component.html
@@ -4,7 +4,7 @@
     <div style="font-size: large">Active Referrals and Drafts</div>
     <div class="spacer"></div>
     <button mat-raised-button color="primary" [routerLink]="'/create-referral'">
-      <mat-icon>add</mat-icon>Create Referral
+      <mat-icon>add</mat-icon>Create New Referral
     </button>
   </div>
 
