--- a/src/app/components/create-referral/create-referral.component.html
+++ b/src/app/components/create-referral/create-referral.component.html
@@ -22,11 +22,11 @@
           <div class="scrollable-container">
             <app-request-supporting-information></app-request-supporting-information>
           </div>
-          <p>You are now done.</p>
-          <div>
-            <button mat-button matStepperPrevious>Back</button>
-            <button mat-button (click)="stepper.reset()">Reset</button>
-          </div>
+<!--          <p>You are now done.</p>-->
+<!--          <div>-->
+<!--            <button mat-button matStepperPrevious>Back</button>-->
+<!--            <button mat-button (click)="stepper.reset()">Reset</button>-->
+<!--          </div>-->
         </mat-step>
 
       </mat-stepper>
