--- a/src/app/components/patient-demographics/patient-demographics.component.html
+++ b/src/app/components/patient-demographics/patient-demographics.component.html
@@ -27,7 +27,7 @@ TODO:
       English <br/>
       German
     </div>
-    <div class="col" style="border-style: solid !important; border-width: thin; padding: 0.5em">Insurance Coverage:
+    <div class="col" style="border-style: solid; border-width: thin; padding: 0.5em">Insurance Coverage:
       <br/>
       Aetna<br/>
       Group: ABCD<br>
