--- a/src/app/components/general-information-and-service-type/general-information-and-service-type.component.html
+++ b/src/app/components/general-information-and-service-type/general-information-and-service-type.component.html
@@ -45,6 +45,18 @@
           </mat-select>
         </mat-form-field>
       </div>
+
+<!--      <div class="col">-->
+<!--        <mat-form-field appearance="outline">-->
+<!--          <mat-label>Race and Ethnicity</mat-label>-->
+<!--          <mat-select>-->
+<!--            <mat-option *ngFor="let employmentStatus of fhirTerminologyConstants.EMPLOYMENT_STATUS"-->
+<!--                        [value]="fhirTerminologyConstants.EMPLOYMENT_STATUS">-->
+<!--              {{employmentStatus.display}}-->
+<!--            </mat-option>-->
+<!--          </mat-select>-->
+<!--        </mat-form-field>-->
+<!--      </div>-->
     </div>
     </mat-card-content>
 
