General information service type form is in working condition.

--- a/src/app/components/create-referral/create-referral.component.html
+++ b/src/app/components/create-referral/create-referral.component.html
@@ -7,8 +7,10 @@
 
         <!-- Select a Provider (for example YMCA) -->
         <mat-step label="Select Recipient">
-          <div class="scrollable-container">
-            <app-service-provider-list></app-service-provider-list>
+          <!--<div class="scrollable-container">-->
+          <div>
+<!--            <app-service-provider-list></app-service-provider-list>-->
+            <app-general-information-and-service-type></app-general-information-and-service-type>
           </div>
         </mat-step>
 
