--- a/src/app/components/general-information-and-service-type/general-information-and-service-type.component.html
+++ b/src/app/components/general-information-and-service-type/general-information-and-service-type.component.html
@@ -1,6 +1,6 @@
 <!-- TODO In addition to the form functionality we need to extract all the css into classes-->
 
-<form [formGroup]="generalInfoServiceTypeForm" (ngSubmit)="onSubmit()" xmlns="http://www.w3.org/1999/html">
+<form [formGroup]="generalInfoServiceTypeForm" (ngSubmit)="onSubmit()">
 
   <mat-card>
     <mat-card-title>Service Type Info</mat-card-title>
@@ -129,11 +129,35 @@
     </mat-card-content>
   </mat-card>
 
-  <div class="row" style="margin-top: 1em">
-    is Race selected {{isRaceSelected()}}
-    <button type="submit">Submit</button>
-    <button (click)="getFormStatus()">Get form Status</button>
-  </div>
+<!--  <div align="end" style="margin-top: 2em">-->
+<!--    <app-save-cancel-form-controls-->
+<!--      [isCancelEnabled]="true"-->
+<!--      [isSaveAndContinueEnabled]="true"-->
+<!--      [isSaveAndExitEnabled]="true"-->
+<!--      (cancelEvent)= "onCancel()"-->
+<!--      (saveAndContinueEvent)="onSaveAndContinue()"-->
+<!--      (saveAndExitEvent)="onSaveAndExit()"-->
+<!--    ></app-save-cancel-form-controls>-->
+<!--  </div>-->
+
+
+<!--  <div class="row" style="margin-top: 1em">-->
+<!--    is Race selected {{isRaceSelected()}}-->
+<!--    <button type="submit">Submit</button>-->
+<!--    <button (click)="getFormStatus()">Get form Status</button>-->
+<!--  </div>-->
 
 
 </form>
+
+<div align="end" style="margin-top: 2em">
+  <app-save-cancel-form-controls
+    [isCancelEnabled]="true"
+    [isSaveAndContinueEnabled]="true"
+    [isSaveAndExitEnabled]="true"
+    (cancelEvent)= "onCancel()"
+    (saveAndContinueEvent)="onSaveAndContinue()"
+    (saveAndExitEvent)="onSaveAndExit()"
+  ></app-save-cancel-form-controls>
+</div>
+
