--- a/src/app/components/save-cancel-form-controls/save-cancel-form-controls.component.html
+++ b/src/app/components/save-cancel-form-controls/save-cancel-form-controls.component.html
@@ -1,3 +1,12 @@
-<button mat-raised-button (click)="onCancel()" style="margin-right: 1em" (click)="onCancel()">Cancel</button>
-<button mat-stroked-button color=primary style="margin-right: 1em" (click)="onSaveAndExit()">Save and Exit</button>
-<button mat-raised-button color=primary (click)="onSaveAndContinue()">Save and Continue</button>
+<button mat-raised-button (click)="onCancel()" style="margin-right: 1em" (click)="onCancel()"
+        [disabled]="!isCancelEnabled">
+  Cancel
+</button>
+<button mat-stroked-button color=primary style="margin-right: 1em" (click)="onSaveAndExit()"
+        [disabled]="!isSaveAndExitEnabled">
+  Save and Exit
+</button>
+<button mat-raised-button color=primary (click)="onSaveAndContinue()"
+        [disabled]="!isSaveAndContinueEnabled">
+  Save and Continue
+</button>
