fixed the transitions for the general information step

--- a/src/app/components/general-information-and-service-type/general-information-and-service-type.component.html
+++ b/src/app/components/general-information-and-service-type/general-information-and-service-type.component.html
@@ -1,6 +1,6 @@
 <!-- TODO In addition to the form functionality we need to extract all the css into classes-->
 
-<form [formGroup]="generalInfoServiceTypeForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="generalInfoServiceTypeForm">
 
   <mat-card>
     <mat-card-title>Service Type Info</mat-card-title>
